--- a/txlib/8.9.96/config.json
+++ b/txlib/8.9.96/config.json
@@ -4,7 +4,7 @@
     "port": 8080
   },
   "share_token": false,
-  "key": "114514",
+  "key": "obkjkwxos",
   "auto_register": true,
   "protocol": {
     "package_name": "com.tencent.mobileqq",
