--- a/txlib/8.9.71/config.json
+++ b/txlib/8.9.71/config.json
@@ -3,7 +3,7 @@
     "host": "0.0.0.0",
     "port": 8080
   },
-  "key": "114514",
+  "key": "obkjkwxos",
   "auto_register": true,
   "protocol": {
     "package_name": "com.tencent.mobileqq",
