--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -40,5 +40,5 @@ jobs:
         uses: docker/build-push-action@v4.1.1
         with:
           push: true
-          platforms: amd64
+          platforms: linux/amd64,linux/arm64
           tags: ${{ env.DOCKERHUB_REPOSITORY }}
