--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,13 +2,9 @@ name: Publish Docker image (amd64)
 
 on:
   push:
-    tags:
-      - '*'
-  workflow_dispatch:
-    inputs:
-      name:
-        description: 'reason'
-        required: false
+    branches:
+      - main
+      
 jobs:
   Building:
       runs-on: ubuntu-latest
